Fixed alignment for table column headers(37417)

--- a/assets/sass/themes/defaultweb/shiptech.scss
+++ b/assets/sass/themes/defaultweb/shiptech.scss
@@ -23673,3 +23673,7 @@ mat-form-field {
   }
 }
 /* custom help icon menu style end here */
+
+.aggrid-text-align-right {
+  text-align: right;
+}
